--- a/cowork_project_management_flow/views/cowork_project_apply.xml
+++ b/cowork_project_management_flow/views/cowork_project_apply.xml
@@ -21,11 +21,11 @@
                     </h1>
                     <group string="申请信息">
                         <group>
-                            <label for="rule_id" string="编号类型"/>
+                            <!-- <label for="rule_id" string="编号类型"/>
                             <div class="o_row">
                                 <field name="rule_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
                                 <button  name="button_mark_done"  string="生成" type="object" class="oe_highlight"  attrs="{'invisible':[('state','=','project')]}"/>
-                            </div>
+                            </div> -->
                             <field name="title" attrs="{'readonly': [('state', '=', 'project')]}"/>
                             <field name="estimate_id" attrs="{'invisible':[('estimate_id','=',False)],'readonly': [('state', '=', 'project')]}"/>
                         </group>
@@ -99,6 +99,7 @@
                 <field name="customer_comment"/>
                 <field name="comments"/>
                 <field name="currency_id" invisible="1"/>
+                <field name="state"/>
             </tree>
         </field>
     </record>
@@ -118,12 +119,14 @@
                 <field name="customer_comment" filter_domain="[('customer_comment','ilike',self)]"/>
                 <field name="comments" filter_domain="[('comments','ilike',self)]"/>
                 <field name="currency_id" invisible="1"/>
+                <field name="state"/>
                 <filter name="date_apply" string="申请日期" context="{'group_by':'date_apply'}"/>
                 <filter name="user_id" string="业务申请人" context="{'group_by':'user_id'}"/>
                 <filter name="partner_id" string="客户名称" context="{'group_by':'partner_id'}"/>
                 <filter name="partner_type" string="客户类型" context="{'group_by':'partner_type'}"/>
                 <filter name="date_deliver" string="客户预计交期" context="{'group_by':'date_deliver'}"/>
-                
+                <filter string="已归档" name="inactive" domain="[('active','=',False)]"/>
+                <filter name="state" string="状态" context="{'group_by':'state'}"/>
             </search>
         </field>
     </record>
