修改权限组：视图以及按钮

--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -231,7 +231,7 @@
                     string="导入调拨清单"
                     icon="fa-upload"
                     type="action" 
-                    class="oe_stat_button"  attrs="{'invisible':[('show_mark_as_todo','!=',False)]}" groups="base.group_user"/>
+                    class="oe_stat_button"  attrs="{'invisible':[('show_mark_as_todo','!=',False)]}" groups="stock.group_stock_user,stock.group_stock_manager"/>
             </xpath>
         </field>
     </record>
