--- a/cowork_project_management_flow/views/cowork_bom.xml
+++ b/cowork_project_management_flow/views/cowork_bom.xml
@@ -23,8 +23,8 @@
                     <button name="button_approval" string="提交" type="object" class="oe_highlight"  states="draft"/>
                     <button name="button_confirm" string="确认" type="object" class="oe_highlight"  states="approval" groups="cowork_project_management_flow.access_group_technique_director_in_cowork_project_management_flow"/>
                     <button name="button_return" string="驳回" type="object" class="oe_highlight"  states="approval" groups="cowork_project_management_flow.access_group_technique_director_in_cowork_project_management_flow"/>
-                    <button name="action_to_requisition" string="新建/更新采购申请" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
-                    <button name="button_to_return" string="驳回" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
+                    <button name="action_to_requisition" string="新建/更新采购申请" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                    <button name="button_to_return" string="驳回" type="object" class="oe_highlight"  states="confirm" groups="cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
 
                     <field name="state" widget="statusbar" statusbar_visible="draft,approval,confirm" readonly="1"/>
                 </header>
@@ -39,9 +39,11 @@
                     <group string="项目情况">
                         <group>
                             <field name="project_id" readonly="1" required="1"/>
+                            <field name="user_id" readonly="1"/>
                         </group>
                         <group>
                             <field name="count" attrs="{'readonly':[('state','!=','draft')]}"/>
+                            <field name="this_count"/>
                         </group>
                     </group>
                     <group string="图纸">
@@ -70,6 +72,7 @@
                     <group string="单台BOM明细">
                         <group>
                             <button type="object" class="oe_highlight" name="cowork_create" string="添加明细"/>
+                            <button type="object" name="compute_buy_count" string="计算本次采购数"/>
                         </group>
                         <field name="spare_parts_lines" nolabel="1" attrs="{'readonly':[('state','!=','draft')]}">
                             <tree editable="bottom" limit="10" create="0" delete="0">
@@ -77,11 +80,13 @@
                                 <field name="categ_id"/>
                                 <field name="product_tmpl_id" domain="[('categ_id','=',categ_id)]" context="{'default_categ_id':categ_id}"/>
                                 <field name="default_code"/>
+                                <field name="purchase_buy"/>
                                 <field name="count"/>
                                 <field name="uom_id"/>
                                 <field name="material"/>
                                 <field name="class_id"/>
                                 <field name="brand_id"/>
+                                <field name="plan_date"/>
                                 <field name="comments"/>
                                 <button type="object" class="oe_highlight" name="cowork_write" string="明细变更"/>
                                 <button type="object" class="oe_highlight" name="cowork_delete" string="删除明细" confirm="是否确认删除"/>
@@ -221,7 +226,8 @@
         <field name="inherit_id" ref="stock.view_picking_form"/>
         <field name="arch" type="xml">
             <xpath expr="//field[@name='origin']" position="after">
-                <field name="project_id" options="{'no_create_edit':True,'no_open':True}" required="1"/>
+                <field name="project_id" options="{'no_create_edit':True,'no_open':True}" required="0"/>
+                <field name="employee_id" attrs="{'readonly':[('state','!=','draft')]}" options="{'no_create_edit':True,'no_open':True}"/>
             </xpath>
             <xpath expr="//field[@name='move_ids_without_package']/tree/field[@name='product_id']" position="before">
                 <field name="project_id"/>
@@ -232,6 +238,17 @@
                     icon="fa-upload"
                     type="action" 
                     class="oe_stat_button"  attrs="{'invisible':[('show_mark_as_todo','!=',False)]}" groups="stock.group_stock_user,stock.group_stock_manager"/>
+            </xpath>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="view_picking_internal_search_cowork">
+        <field name="name">调拨单search cowork</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="stock.view_picking_internal_search"/>
+        <field name="arch" type="xml">
+            <xpath expr="//field[@name='product_id']" position="after">
+                <field name="project_id"/>
             </xpath>
         </field>
     </record>
