--- a/cowork_project_management_flow/views/cowork_project_apply.xml
+++ b/cowork_project_management_flow/views/cowork_project_apply.xml
@@ -7,14 +7,18 @@
             <form string="立项申请">
                 <header>
                     <button name="action_to_project" string="商务部提交" type="object" class="oe_highlight" states='business' groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
-                    <button name="create_estimate" string="转项目评估" type="object" class="oe_highlight" attrs="{'invisible':['|',('state','!=','project'),('estimate_id','!=',False)]}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
-                    <button name="button_return_apply" string="驳回" type="object" class="oe_highlight" attrs="{'invisible':['|',('estimate_id','!=',False),('state','!=','project')]}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
-                    <field name="state" widget="statusbar" statusbar_visible="business,project" readonly="1" />
+                    <!-- <button name="create_estimate" string="转项目评估" type="object" class="oe_highlight" attrs="{'invisible':['|',('state','!=','project'),('estimate_id','!=',False)]}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>
+                    <button name="button_return_apply" string="驳回" type="object" class="oe_highlight" attrs="{'invisible':['|',('estimate_id','!=',False),('state','!=','project')]}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow"/>  ,project -->
+                    <field name="state" widget="statusbar" statusbar_visible="business" readonly="1" />
                 </header>
                 <sheet>
                     <div class="oe_button_box" name="button_box">
                         <button type="object" class="oe_stat_button" icon="fa-bookmark-o" string="项目评估" name="action_to_estimate" attrs="{'invisible':[('estimate_id','=',False)]}"/>
                         <button type="object" class="oe_stat_button" icon="fa-cart-plus" string="询价单" name="action_to_purchase" attrs="{'invisible':[('state','=','business')]}"/>
+                        
+                        <button name="toggle_active" type="object" class="oe_stat_button" icon="fa-archive" groups="base.user_admin" >
+                            <field name="active" widget="boolean_button" string="有效" options='{"terminology": "archive"}'/>
+                        </button>
                     </div>
                     <h1>
                         <field name="name" readonly="1"/>
@@ -26,7 +30,7 @@
                                 <field name="rule_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
                                 <button  name="button_mark_done"  string="生成" type="object" class="oe_highlight"  attrs="{'invisible':[('state','=','project')]}"/>
                             </div> -->
-                            <field name="title" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="title" attrs="{'readonly': [('state', '=', 'project')]}" required="1"/>
                             <field name="estimate_id" attrs="{'invisible':[('estimate_id','=',False)],'readonly': [('state', '=', 'project')]}"/>
                         </group>
                         <group>
@@ -37,26 +41,27 @@
                     </group>
                     <group string="商务信息">
                         <group>
-                            <field name="partner_id" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="partner_id" attrs="{'readonly': [('state', '=', 'project')]}" required="1" context="{'search_default_customer':1}" domain="[('customer','=',True)]"/>
                             <field name="partner_type" widget="radio" options="{'horizontal': true}" attrs="{'readonly': [('state', '=', 'project')]}"/>
                             <field name="partner_address" attrs="{'readonly': [('state', '=', 'project')]}"/>
                         </group>
                         <group>
                             <field name="budget" widget="monetary" options="{'currency_field': 'currency_id'}" attrs="{'readonly': [('state', '=', 'project')]}"/>
-                            <field name="count" attrs="{'readonly': [('state', '=', 'project')]}"/>
+                            <field name="count" attrs="{'readonly': [('state', '=', 'project')]}" required="1"/>
                             <field name="date_deliver" attrs="{'readonly': [('state', '=', 'project')]}"/>
                             <field name="customer_comment" attrs="{'readonly': [('state', '=', 'project')]}"/>
                             <field name="currency_id" invisible="1"/>
                         </group>
                     </group>
                     <group string="客户需求">
-                        <field name="customer_requirement" attrs="{'readonly': [('state', '=', 'project')]}" nolabel="1"/>
+                        <field name="customer_requirement" attrs="{'readonly': [('state', '=', 'project')]}" nolabel="1" required="1"/>
                     </group>
                     <group string="项目负责人" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow">
                         <field name="charger_lines" nolabel="1">
                             <tree editable="bottom">
                                 <field name="job_id" required="1" options="{'no_create': True}"/>
                                 <field name="employee_id" domain="[('job_id','=',job_id)]" options="{'no_create': True}"/>
+                                <field name="comment"/>
                             </tree>
                         </field>
                     </group>
@@ -71,6 +76,55 @@
                     <group string="其他事项">
                         <field name="comments" nolabel="1" attrs="{'readonly': [('state', '=', 'project')]}"/>
                     </group>
+                    <notebook>
+                    <page string="送货回执单">
+                        <header>
+                            <button name="d_plan_to_approval" string="提交" type="object" class="oe_highlight" attrs="{'invisible': [('delivery_paper_state', '!=', 'draft')]}"  groups="cowork_project_management_flow.access_group_merchant_assistant_in_cowork_project_management_flow"/>
+
+                            <button name="d_approval_to_pass" string="通过" type="object" class="oe_highlight" attrs="{'invisible': [('delivery_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+                            <button name="d_approval_to_draft" string="驳回" type="object" class="oe_highlight" attrs="{'invisible': [('delivery_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+
+                            <field name="delivery_paper_state" widget="statusbar" readonly="1"/>
+                        </header>
+                        <group>
+                            <group>
+                                <field name="delivery_paper" attrs="{'readonly':[('delivery_paper_state','!=','draft')]}"/>
+                            </group>
+                        </group>
+                    </page>
+                    </notebook>
+                    <notebook>
+                    <page string="开票回执单">
+                        <header>
+                            <button name="i_plan_to_approval" string="提交" type="object" class="oe_highlight" attrs="{'invisible': [('invoice_paper_state', '!=', 'draft')]}"  groups="cowork_project_management_flow.access_group_merchant_assistant_in_cowork_project_management_flow"/>
+
+                            <button name="i_approval_to_pass" string="通过" type="object" class="oe_highlight" attrs="{'invisible': [('invoice_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+                            <button name="i_approval_to_draft" string="驳回" type="object" class="oe_highlight" attrs="{'invisible': [('invoice_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+
+                            <field name="invoice_paper_state" widget="statusbar" readonly="1"/>
+                        </header>
+                        <group>
+                            <group>
+                                <field name="invoice_paper" attrs="{'readonly':[('invoice_paper_state','!=','draft')]}"/>
+                            </group>
+                        </group>
+                    </page>
+                    </notebook>
+                    <notebook>
+                    <page string="验收回单">
+                        <header>
+                            <button name="c_plan_to_approval" string="提交" type="object" class="oe_highlight" attrs="{'invisible': [('check_paper_state', '!=', 'draft')]}"  groups="cowork_project_management_flow.access_group_merchant_assistant_in_cowork_project_management_flow"/>
+                            <button name="c_approval_to_pass" string="通过" type="object" class="oe_highlight" attrs="{'invisible': [('check_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+                            <button name="c_approval_to_draft" string="驳回" type="object" class="oe_highlight" attrs="{'invisible': [('check_paper_state', '!=', 'approval')]}" groups="cowork_project_management_flow.access_group_merchant_director_in_cowork_project_management_flow"/>
+                            <field name="check_paper_state" widget="statusbar" readonly="1"/>
+                        </header>
+                        <group>
+                            <group>
+                                <field name="check_paper" attrs="{'readonly':[('check_paper_state','!=','draft')]}"/>
+                            </group>
+                        </group>
+                    </page>
+                    </notebook>
                 </sheet>
                 <div class="oe_chatter">
                     <field name="message_follower_ids" widget="mail_followers"/>
