--- a/cowork_project_management_flow/views/work.xml
+++ b/cowork_project_management_flow/views/work.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <record model="ir.ui.view" id="view_form_cowork_cost_labor_quote">
-        <field name="name">人力成本行</field>
+        <field name="name">人力成本行报价</field>
         <field name="model">cowork.cost.labor.quote</field>
         <field name="arch" type="xml">
             <form string="人力成本行">
@@ -13,13 +13,13 @@
                             <field name="job_id"/>
                             <field name="count"/>
                             <field name="total_hours"/>
-                            <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                            <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
                         </group>
                         <group>
                             <field name="count_day"/>
                             <field name="hours_per_day"/>
-                            <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}"/>
-                            <field name="total_quote"/>
+                            <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                            <field name="total_quote" />
                             <field name="currency_id" invisible="1"/>
                         </group>
                     </group>
@@ -32,6 +32,33 @@
                                 <field name="uom_id"/>
                             </tree>
                         </field>
+                    </group>
+                </sheet>
+            </form>
+        </field>
+    </record>
+
+    <record model="ir.ui.view" id="view_form_cowork_cost_labor">
+        <field name="name">人力成本行方案</field>
+        <field name="model">cowork.cost.labor</field>
+        <field name="arch" type="xml">
+            <form string="人力成本行">
+                <sheet>
+                    <div class="oe_button_box" name="button_box">
+                    </div>
+                    <group>
+                        <group>
+                            <field name="job_id"/>
+                            <field name="count"/>
+                            <field name="total_hours"/>
+                            <field name="unit_price" widget="monetary" options="{'currency_field': 'currency_id'}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                        </group>
+                        <group>
+                            <field name="count_day"/>
+                            <field name="hours_per_day"/>
+                            <field name="total_price" widget="monetary" options="{'currency_field': 'currency_id'}" groups="cowork_project_management_flow.access_group_project_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_vice_general_manager_in_cowork_project_management_flow,cowork_project_management_flow.access_group_general_manager_in_cowork_project_management_flow"/>
+                            <field name="currency_id" invisible="1"/>
+                        </group>
                     </group>
                 </sheet>
             </form>
